--- a/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/home/home.component.html
@@ -95,7 +95,7 @@
 >
   <div routerLink="/html-course" style="cursor: pointer;">
 	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
-		<img src="../../../assets/img/html.png" />
+		<img class="bg-bluedark-tucode" src="../../../assets/img/html-esta.png" />
 		<figcaption>
       <h4 class="text-center mb-2 bg-yellow-tucode" style="border-radius: 10px;">HTML</h4>
 		  El Lenguaje de Marcado de Hipertexto (HTML) es el código que se utiliza
@@ -108,7 +108,7 @@
 
   <div routerLink="/css-course" style="cursor: pointer;">
 	<figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
-		<img src="../../../assets/img/css.png" />
+		<img class="bg-bluedark-tucode" src="../../../assets/img/css-removebg-preview.png" />
 		<figcaption>
       <h4 class="text-center mb-2 bg-yellow-tucode" style="border-radius: 10px;">CSS</h4>
 		  Es un lenguaje informático que especifica
@@ -120,8 +120,8 @@
   </div>
 
   <div routerLink="/java-script-course" style="cursor: pointer;">
-    <figure class="imghvr-hinge-left bg-yellow-tucode main-figure">
-      <img src="../../../assets/img/jv.png" />
+    <figure  class="imghvr-hinge-left bg-yellow-tucode main-figure">
+      <img class="bg-bluedark-tucode" style="height: 100%; width: 1000px;"  src="../../../assets/img/javascript-esta.png" />
       <figcaption>
         <h4 class="text-center mb-2 bg-yellow-tucode" style="border-radius: 10px;">JavaScript</h4>
 
