--- a/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/navbar/navbar.component.html
@@ -41,8 +41,9 @@
         </li>
         <li class="nav-item">
           <a
-            class="nav-link btn"
+            class="nav-link"
             routerLinkActive="main-active"
+            style="cursor: pointer;"
             (click)="verifyUser()"
             >Admin</a
           >
