--- a/tuCodigo/tucodigo_front/src/app/Components/profile-admin/profile-admin.component.css
+++ b/tuCodigo/tucodigo_front/src/app/Components/profile-admin/profile-admin.component.css
@@ -5,12 +5,12 @@
     
 }
 
-.main-ans {
+/* .main-ans {
     width: 150px !important;
 }
 .main-ans2 {
     width: 300px !important;
-}
+} */
 
 .main-but-ed {
     cursor: pointer;
