[add] add curse css

--- a/tuCodigo/tucodigo_front/src/app/Components/html-course/html-course.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/html-course/html-course.component.html
@@ -1,1 +1,20 @@
-<p>html-course works!</p>
+<section class="container-fluid bg-medium-tucode p-5">
+  <div class="shadow-lg w-100 bg-medium-tucode">
+    <h1 class="pb-5 text-white">Curso Html</h1>
+    <h2 class="pb-1 text-white">Introducción Curso</h2>
+
+    <div class="video1-wrapper">
+      <div class="video1">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/6LzKOiJ0uEs"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+  </div>
+
