--- a/tuCodigo/tucodigo_front/src/app/Components/css-course/css-course.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/css-course/css-course.component.html
@@ -1,1 +1,515 @@
-<p>css-course works!</p>
+<section class="container-fluid bg-medium-tucode p-5">
+  <div class="shadow-lg w-100 bg-medium-tucode">
+    <h1 class="pb-5 text-white">Curso CSS</h1>
+    <h2 class="pb-1 text-white">Introducción Curso</h2>
+
+    <div class="video1-wrapper">
+      <div class="video1">
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/6LzKOiJ0uEs"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+  </div>
+
+  <div class="p-1 d d-flex justify-content-between flex-wrap">
+    <div class="W-list">
+      <h4 class="text-white pt-5 pb-1">Temario</h4>
+
+      <div class="list-group">
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(1)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">1. Curso CSS</h5>
+          </div>
+          <p class="absolut">Introducción</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(2)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">2. Curso CSS</h5>
+          </div>
+          <p class="absolut">Sintaxis</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(3)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">3. Curso CSS</h5>
+          </div>
+          <p class="absolut">Aplicar CSS en página web</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(4)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">4. Curso CSS</h5>
+          </div>
+          <p class="absolut">Selectores</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(5)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">5. Curso CSS</h5>
+          </div>
+          <p class="absolut">Pseudo Clases</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(6)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">6. Curso CSS</h5>
+          </div>
+          <p class="absolut">Pseudo Elementos</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(7)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">7. Curso CSS</h5>
+          </div>
+          <p class="absolut">Prefijos</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(8)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">8. Curso CSS</h5>
+          </div>
+          <p class="absolut">Resize</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+          (click)="curso(9)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">9. Curso CSS</h5>
+          </div>
+          <p class="absolut">Margenes</p>
+        </a>
+
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA hover"
+          (click)="curso(10)"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">10. Curso CSS</h5>
+          </div>
+          <p class="absolut">Posición</p>
+        </a>
+      </div>
+    </div>
+    <!--  <div class="pt-5">
+      <div class="pt-5">
+        <textarea name="" id="" cols="50" rows="25" class="pt-2 textt"> Puedes tomar notas de tus cursos</textarea>
+      </div>
+
+    </div -->>
+  </div>
+  //------------------------------------------------
+  <div>
+    <div class="pt-5" *ngIf="link == 10">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/t1UiQ5f8K_k"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="pt-5" *ngIf="link == 9">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/3pO0Ho0yjt4"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 8">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/jpBpiCkzkJA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 7">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/_BNNYqU2obY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 6">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/TMFg438CSAA"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 5">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/at48W8Scr9E"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 4">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/rps1MC-XdEY"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 3">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/kAhGO6IAQFg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 2">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800"
+            height="600"
+            src="https://www.youtube.com/embed/DV42C-yyUyI"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="pt-5" *ngIf="link == 1">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="800px"
+            height="600px"
+            src="https://www.youtube.com/embed/5YiU9dgB6ZQ"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="d-flex justify-content-center bg-medium-tucode">
+  <h2 class="text-white p-5">Prueba tus Conocimientos aprendidos</h2>
+  <div class="p-5">
+    <a class="btn btn-warning" (click)="CursoActive()">Iniciar Test</a>
+  </div>
+</section>
+
+  <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso==1">
+    <div class="p-5 d-flex" >
+      <h4 class="text-white">
+        1. El primer punto consta de crear una clase que manipule el color de
+        fondo de un contenedor de etiqueta DIV, la clase debe tener como nombre
+        "Bg-color-div", el color de fondo debe de ser Rojo
+      </h4>
+    </div>
+  </section>
+  <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso==2">
+    <div class="p-5 d-flex" >
+      <h4 class="text-white">
+        2. El segundo punto consta de crear una clase que agregue un borde solido al contorno de un contenedor,
+        la clase debe de tener como nombre "Border".
+      </h4>
+    </div>
+  </section>
+  <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso==3">
+    <div class="p-5 d-flex" >
+      <h4 class="text-white">
+        3. El Tercer punto consta de ajustar el ancho de un contenedor DIV  a un 50 % de la pantalla,
+        la clase debe tener como nombre "Ancho".
+      </h4>
+    </div>
+  </section>
+
+  <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso==4">
+    <div class="p-5 d-flex" >
+      <h4 class="text-white">
+        4. El Cuarto punto consta de ajustar la altura de un contenedor DIV a un 70% de la pantalla,
+        la clase debe de tener como nombre "Alto".
+      </h4>
+    </div>
+  </section>
+  <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso==5">
+    <div class="p-5 d-flex" >
+      <h4 class="text-white">
+        5. El Quinto punto consta de agregar un padding solo en la parte de abajo a un contenedor DIV,
+        la clase debe de tener el nombre de "Padding".
+      </h4>
+    </div>
+  </section>
+
+  <section class="d-flex justify-content-center bg-medium-tucode p-5" *ngIf="numeroCurso>=1">
+    <form #consola="ngForm">
+    <textarea
+      name="consola"
+      id=""
+      cols="50"
+      rows="5"
+      class="bg-bluedark-tucode font-yellow-tucode p-2"
+      #ejercise="ngModel"
+      [(ngModel)]="courseService.selectCurses.ejercise"
+    ></textarea>
+
+
+
+  </form>
+
+
+
+  <section class="d-flex justify-content-center bg-medium-tucode p-5">
+    <a class="btn btn-warning" (click)="comprobar(consola)">Comprobar</a>
+  </section>
+
+
+
