--- a/tuCodigo/tucodigo_front/src/app/Components/css-course/css-course.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/css-course/css-course.component.html
@@ -29,7 +29,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -54,7 +54,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -79,7 +79,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -104,7 +104,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -129,7 +129,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -154,7 +154,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +179,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -204,7 +204,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -229,7 +229,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -255,7 +255,7 @@
         >
           <div class="lineTop" style="z-index: 1"></div>
           <div class="lineBoton" style="z-index: 1"></div>
-          <div class="d-flex w-100 justify-content-start">
+          <div class="d-flex w-100 justify-content-start" style="cursor: pointer;">
             <div class="pe-5 ps-2 pt-2" style="z-index: 2">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -492,6 +492,7 @@
   <section class="d-flex justify-content-center bg-medium-tucode p-5" *ngIf="numeroCurso>=1">
     <form #consola="ngForm">
     <textarea
+      style="resize: none;"
       name="consola"
       id=""
       cols="50"
