--- a/tuCodigo/tucodigo_front/src/app/Components/html-course/html-course.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/html-course/html-course.component.html
@@ -18,3 +18,286 @@
     </div>
   </div>
 
+  <div class="p-1 d d-flex justify-content-between flex-wrap">
+    <div class="W-list">
+      <h4 class="text-white pt-5 pb-1">Temario</h4>
+
+      <div class="list-group">
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">1. Curso Html</h5>
+          </div>
+          <p class="absolut">Introducción</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">2. Curso html</h5>
+          </div>
+          <p class="absolut">Sintaxis</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">3. Curso html</h5>
+          </div>
+          <p class="absolut">Html 5</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">4. Curso Html</h5>
+          </div>
+          <p class="absolut">Contenedores</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">5. Curso Html</h5>
+          </div>
+          <p class="absolut">Div</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">6. Curso Html</h5>
+          </div>
+          <p class="absolut">Estandar</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">7. Curso Html</h5>
+          </div>
+          <p class="absolut">Etiquetas avanzadas</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">8. Curso Html</h5>
+          </div>
+          <p class="absolut">Estructuras</p>
+        </a>
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">9. Curso Html</h5>
+          </div>
+          <p class="absolut">Grip</p>
+        </a>
+
+        <a
+          class="list-group-item list-group-item-action list-group-item-secondary border AltA hover"
+        >
+          <div class="lineTop" style="z-index: 1"></div>
+          <div class="lineBoton" style="z-index: 1"></div>
+          <div class="d-flex w-100 justify-content-start">
+            <div class="pe-5 ps-2 pt-2" style="z-index: 2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="30"
+                height="30"
+                fill="currentColor"
+                class="bi bi-play-circle-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z"
+                />
+              </svg>
+            </div>
+            <h5 class="mb-1">10. Curso Html</h5>
+          </div>
+          <p class="absolut">Html avanzado</p>
+        </a>
+      </div>
+    </div>
+    <!--  <div class="pt-5">
+      <div class="pt-5">
+        <textarea name="" id="" cols="50" rows="25" class="pt-2 textt"> Puedes tomar notas de tus cursos</textarea>
+      </div>
+
+    </div -->>
+  </div>
+
+  <div>
+    <div class="pt-5">
+      <div class="videos-wrapper">
+        <div class="videos">
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/rbuYtrNUxg4"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="d-flex justify-content-center bg-medium-tucode">
+  <h2 class="text-white p-5">Prueba tus Conocimientos aprendidos</h2>
+  <div class="p-5">
+    <a class="btn btn-warning">Iniciar Test</a>
+  </div>
+</section>
+
+
