--- a/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/forum/forum.component.html
@@ -6,7 +6,7 @@
       </h2>
     </div>
 
-    <form #formForum="ngForm" class="m-4">
+    <form #formForum="ngForm" class="m-4 d-flex flex-column">
       <div class="form-group m-2">
         <label for="Name" class="fs-5 bg-title" style="color: antiquewhite; font-weight: bolder;">Nombre o
           Usuario</label>
@@ -30,7 +30,7 @@
           style="width: 100%; height: 150px;" name="ForumContent" #ForumContent="ngModel"
           [(ngModel)]="forumService.selectedForum.ForumContent"></textarea>
       </div>
-      <a class="btn btn-warning fs-5" style="color: #1D2731;font-weight: bold; border-color:antiquewhite;"
+      <a class="btn btn-warning fs-5 align-self-center" style="color: #1D2731;font-weight: bold; border-color:antiquewhite;"
         (click)="createForum(formForum)">Registrar pregunta</a>
       
     </form>
