--- a/tuCodigo/tucodigo_front/src/app/Components/html-course/html-course.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/html-course/html-course.component.html
@@ -303,7 +303,7 @@
 <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso>=1">
   <div class="p-5 d-flex" >
     <h4 class="text-white">
-      1. Bienvenido al primer ejercicio de html
+      1. En el primer ejercico se debe crear un texto etiquetado con H1, El texto debe ser el siguiente; "Hola mundo"
     </h4>
   </div>
 </section>
