--- a/tuCodigo/tucodigo_front/src/app/Components/java-script-course/java-script-course.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/java-script-course/java-script-course.component.html
@@ -302,7 +302,8 @@
 <section class="d-flex justify-content-center bg-medium-tucode" *ngIf="numeroCurso>=1">
   <div class="p-5 d-flex" >
     <h4 class="text-white">
-      1. Bienvenido al primer ejercicio de JavaScript
+      1. En el primer ejercicio se debe de  declarar una variable de tipo String y asignarle un valor "Hola Mundo", la variable
+      se debe de llamar "VarMundo"
     </h4>
   </div>
 </section>
