--- a/tuCodigo/tucodigo_front/src/app/Components/register/register.component.html
+++ b/tuCodigo/tucodigo_front/src/app/Components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid bg-register">
   <div class="row p-5 d-">
     <div class="col-md-4 shadow-lg p-3 ms-5">
-      <h2 class="text-center mb-4 mt-5 text-white animated pulse">Ingrea tus datos</h2>
+      <h2 class="text-center mb-4 mt-5 text-white animated pulse">Ingresa tus datos</h2>
 
       <form #userForm="ngForm" (ngSubmit)="registerUser(userForm)" class="mb-3 d-flex flex-column ">
         <div class="mb-3 animated bounceInRight">
@@ -30,7 +30,7 @@
 
         <div class="mb-3 animated bounceInRight">
           <label for="exampleInputEmail1" class="form-label text-white"
-            >Email address</label
+            >Correo Electrónico</label
           >
           <input
             type="email"
